examples/test/testpolicy17184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17184
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key23: value16
      key42: value45
      key49: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value45
          key15: value40
      podSelector:
        matchLabels:
          key16: value35
          key2: value24
          key22: value38
